@@ -11,6 +11,8 @@ Changes in 3.1.2
        definitions. FR#90.
 * FIX: getvolbypath returns incorrect volume, bug #563
 * FIX: fd leak when using appledouble = v2, bug #554
+* UPD: New options that control whether dbus and Tracker are started:
+       'start dbus' and 'start tracker', both default to yes, FR#91
 
 Changes in 3.1.1
 ================
